// Proto file for Users gRPC service
syntax = "proto3";

package ecomm.users;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUserEmail (GetUserEmailRequest) returns (GetUserEmailResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string created_at = 6;
}

message GetUserEmailRequest {
  int64 user_id = 1;
}

message GetUserEmailResponse {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
}
